# hyper-etable

./: .gitignore  plpy_transit.py  pyproject.toml  requirements.txt  setup.py
hyper_etable/: .rels  PLUS.XLSX  SUMMM.XLSX  __main__.py  cell_resolver.py  connector.py  connerctor.py  duck2py.py  etable.py  etable_transpiler.py  meta_table.py  ms_api.py  ms_app_config.py  plus.xlsx  pysourcebuilder.py  run_util.py  runpy.py  sourcebuilder.py  spiletrancer.py  type_mapper.py  util.py
tests/: gui1.xlsx  gui2.xlsx  gui2_bad.xlsx  plus_selectif.xlsx  plus_selectif_2.xlsx  plus_selectif_min.xlsx  selectfromrange.xlsx  selectfromrange_from_select.xlsx  selectfromrange_selectif_twice.xlsx  selectfromrange_selectif_twice_synced.xlsx  selectif_double.xlsx  simple.xlsx  simple_branch.xlsx  summm.xlsx  test_add_row.py  test_airtable.py  test_connector.py  test_cycle_run.py  test_dump.py  test_etable.py  test_etable2.py  test_fast.py  test_gsheet.py  test_parser.py  test_run_gui.py  test_sql_conn.py  test_stack.py  test_stack_inline.py  test_static_xlsx.py  test_xlsx.py  trucks.xlsx
tests/add_row/: a.py  a_add.py  has_header_sort_bad.xlsx  test_add_row.py
tests/basic/: main.py  main.xlsx
tests/dump/: dump_me.xlsx  gg.py
tests/header_select/: a.py  a_custom_class.py  a_plan.py  a_plan_custom_class.py  classes_a_custom_class.py  classes_a_custom_class_input.py  has_header.xlsx  has_header_sort_bad.xlsx  result_has_header.xlsx
tests/project1/: Project1.py  Project1.xlsx
tests/schedule/: 0_Schedule.xlsx  Schedule.py
tests/schedule1_1/: 0_Schedule1_1.xlsx  Schedule1_1.py
(+31 files in other folders)
